# CSE121-Lab

./: .gitignore
Lab1/hello_world/main/: hello_world_main.c
Lab2/lab2/: DFRobotMain.cpp  DFRobot_RGBLCD1602.cpp  DFRobot_RGBLCD1602_ESP32C3.cpp  DFRobot_RGBLCD1602_ESP32C3.h
Lab2/lab2/main/: .lab2.c.swo  .lab2.c.swp  temp.c  temphumread.h
Lab3/: CMakeLists.txt  DFRobotMainOld.cpp  DFRobotOld.cpp  DFRobotOld.h  DFRobot_RGBLCD1602.cpp  DFRobot_RGBLCD1602.h  main.cpp  test
Lab3/lab3_2/: CMakeLists.txt
Lab3/lab3_2/main/: CMakeLists.txt  DFRobotMain.cpp  DFRobot_RGBLCD1602.cpp
Lab3/lab3_3/main/: CMakeLists.txt  DFRobotMain.cpp  DFRobot_RGBLCD1602_ESP32C3.h  f.h  temphumread.c
Lab4/lab4_1/: lab4_10.cpp  sdkconfig
Lab4/lab4_1/main/: CMakeLists.txt  lab4_1.cpp
Labs/Lab1/hello_world/main/: .Blink.c.swp
Labs/Lab2/lab2/main/: .temp.c.swo  CMakeLists.txt
